--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,22 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-
-    <!-- 创建一个 TextView 用于显示按键事件或摇杆事件的输出 -->
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true">
-
-        <TextView
-            android:id="@+id/textView"
+        android:orientation="vertical">
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:text="Press any key or move joystick"
-            android:textSize="18sp" />
-    </ScrollView>
+            android:layout_height="0dp"
+            android:layout_weight="3">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:scrollbarAlwaysDrawVerticalTrack="true"
+                android:text="Press any key or move joystick"
+                android:textSize="18sp" />
+        </ScrollView>
+        <ActionMenuView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="0">
+            <Button
+                android:id="@+id/btn_key"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="btn_key" />
+            <Button
+                android:id="@+id/btn_joy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="btn_joy" />
+        </ActionMenuView>
+    </LinearLayout>
+    <!-- 创建一个 TextView 用于显示按键事件或摇杆事件的输出 -->
+
 
     <!-- 用于监听游戏手柄事件的根视图 -->
     <View
